Fixed bug causing meme image to not align properly

--- a/src/styles.css
+++ b/src/styles.css
@@ -47,8 +47,10 @@ input {
 }
 
 .meme--image {
-  max-width: 100%;
+  width: 100%;
   border-radius: 3px;
+  justify-content: center;
+  align-items: center; 
 }
 
 .meme--text {
@@ -78,6 +80,8 @@ input {
 
 .meme {
   position: relative;
+  /* justify-content: center;
+  align-items: center; */
 }
 
 
@@ -89,3 +93,31 @@ input {
   top: 0;
 }
 
+.form--button { 
+    grid-column: 1 / -1;
+    font-family: "Karla", sans-serif;
+    border-radius: 5px;
+    background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.form--input {
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  border: 1px solid #D5D4D8;
+  text-indent: 5px;
+  width: 100%;
+}
+
+.form {
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;
+  gap: 17px;
+  margin-bottom: 17px;
+}
+
+main {
+  padding: 36px;
+}
